mythtv (0.22.0~trunk22323-0ubuntu1) UNRELEASED; urgency=low

  * New upstream checkout (r22323)
    - Themes have been shuffled around a bunch.
  * debian/control:
    - Conflicts and replaces for themes that are now part of this package
  * debian/mythtv-setup.desktop:
    - Set to a real icon.
  * Set up some symlinks for the dejavu fonts so they aren't installed several
    times.

 -- Mario Limonciello <superm1@ubuntu.com>  Thu, 08 Oct 2009 19:34:38 -0500

mythtv (0.22.0~trunk22304-0ubuntu1) karmic; urgency=low

  * New upstream checkout (r22304)
    - Fixes crash during image loading of mythfrontend (LP: #445173)
    - Disables pulseaudio harder, fixing sound playback when it's installed.
      (LP: #436792)
  * debian/mythtv_0.22.0.sql:
    - Set Internal as the default player across the board.  Looks like some
      areas were previously missed.  This only affects new installs.
      (LP: #445984)
  * debian/patches/10_mythfilldatabase_log.dpatch:
    - Update to actually log to a file not a directory.
  * debian/patches:
    - Drop any patches that weren't actually being applied.
  * Set default theme to Mythbuntu rather than Mythbuntu-9.10 since upstream
    accepted it without a version number applied.
  * debian/mythtv-database.{postinst,config}:
    - Use the debian system maintainer account to set things up if possible.
    - Drop broken logic for trying to detect when slow writes are needed.

 -- Mario Limonciello <superm1@ubuntu.com>  Wed, 07 Oct 2009 23:24:05 -0500

mythtv (0.22.0~trunk22242-0ubuntu1) karmic; urgency=low

  * New upstream checkout (r22242)
    - Fixes protocol mismatch in 22167 (LP: #440807)
  * mythtv_0.22.0.sql:
    - Set correct path for movie directories (LP: #440680)
    - Set mytharchive work directory (LP: #439213)

 -- Mario Limonciello <superm1@ubuntu.com>  Sun, 04 Oct 2009 20:43:11 -0500

mythtv (0.22.0~trunk22167-0ubuntu1) karmic; urgency=low

  * New upstream checkout (r22167).
    - Fixes some segfaults.
