@@ -8,6 +8,8 @@ mythtv (0.22.0~trunk22323-0ubuntu1) UNRELEASED; urgency=low
     - Set to a real icon.
   * Set up some symlinks for the dejavu fonts so they aren't installed several
     times.
+  * debian/rules:
+    - Remove references to firewire_tester.  We're not building it.
 
  -- Mario Limonciello <superm1@ubuntu.com>  Thu, 08 Oct 2009 19:34:38 -0500
 
